<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F4F4"
    tools:context=".MainActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="185dp"
                android:background="@color/colorPrimaryDark"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/titlePage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="13dp"
                    android:layout_marginTop="40dp"
                    android:fontFamily="monospace"
                    android:text="@string/edit_task"
                    android:textAlignment="center"
                    android:textColor="#ffffff"
                    android:textSize="25dp"
                    android:textStyle="bold" />


                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="20dp"
                    android:background="#131e69" />


            </LinearLayout>


            <LinearLayout
                android:id="@+id/ourList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="-60dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/bgcorners"
                android:orientation="vertical">


                <com.google.android.material.textfield.TextInputLayout

                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    app:counterEnabled="true"
                    app:counterMaxLength="16"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/addEditTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:hint="@string/add_title"
                        android:inputType="textAutoCorrect"
                        android:paddingStart="10dp"
                        android:textColor="@color/design_default_color_primary_dark"
                        android:textColorHint="@color/colorAccent">

                    </com.google.android.material.textfield.TextInputEditText>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout

                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    app:counterEnabled="true"
                    app:counterMaxLength="70"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/addEditDesc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="18dp"
                        android:hint="@string/description"
                        android:inputType="text"
                        android:maxLength="70"
                        android:paddingStart="10dp"
                        android:textColor="@color/design_default_color_primary_dark"
                        android:textColorHint="@color/colorAccent">

                    </com.google.android.material.textfield.TextInputEditText>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout

                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    app:counterEnabled="true"
                    app:counterMaxLength="12"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/addEditTime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="18dp"
                        android:background="@null"
                        android:hint="@string/time"
                        android:inputType="textAutoCorrect"
                        android:paddingStart="10dp"
                        android:textColor="@color/design_default_color_primary_dark"
                        android:textColorHint="@color/colorAccent">

                    </com.google.android.material.textfield.TextInputEditText>

                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

            <Button
                android:id="@+id/btnSaveUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/bgcorners"
                android:backgroundTint="@color/colorAccent"
                android:elevation="20dp"
                android:text="Save Update"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnDelete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/bgcorners"
                android:backgroundTint="#9a9a9a"
                android:elevation="20dp"
                android:text="@string/delete"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>