<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F4F4"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="198dp"
        android:orientation="vertical"
        android:padding="10dp"
        android:background="@color/colorPrimaryDark">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#ffffff"
                    android:text="@string/myToDoList"
                    android:textAlignment="center"
                    android:layout_marginTop="30dp"
                    android:fontFamily="monospace"
                    android:layout_marginLeft="20dp"
                    android:textSize="25dp"
                    android:textStyle="bold"
                    android:id="@+id/titlePage"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/finish"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp"
                    android:textSize="18sp"
                    android:textAlignment="center"
                    android:textColor="#4a4e6a"
                    android:id="@+id/subtitlePage"/>

            </LinearLayout>

            <androidx.coordinatorlayout.widget.CoordinatorLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom|end"
                    android:layout_margin="30dp"
                    android:layout_marginLeft="10dp"
                    android:paddingTop="15dp"
                    android:src="@drawable/ic_add_black_24dp"
                    app:fabSize="auto"
                    android:id="@+id/btnAdd"
                    app:elevation="6dp"/>

            </androidx.coordinatorlayout.widget.CoordinatorLayout>


<!--            <androidx.appcompat.widget.AppCompatButton-->
<!--                android:layout_width="34dp"-->
<!--                android:id="@+id/btnAdd"-->
<!--                android:layout_height="34dp"-->
<!--                android:layout_marginLeft="78dp"-->
<!--                android:layout_gravity="center"-->
<!--                android:textAlignment="center"-->
<!--                android:textStyle="bold"-->
<!--                android:text="+"-->
<!--                android:contextClickable="true"-->
<!--                android:background="@drawable/btncircle"-->
<!--                android:textSize="20sp"-->
<!--                android:textColor="#fff"-->
<!--                android:elevation="10dp" />-->


        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:background="#131e69"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:id="@+id/ourList"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/end"
        android:textSize="17sp"
        android:textColor="#9a9a9a"
        android:textAlignment="center"
        android:textStyle="bold"
        android:id="@+id/endPage"/>


</LinearLayout>