<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F4F4"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="185dp"
        android:orientation="vertical"
        android:background="@color/colorPrimaryDark">



                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#ffffff"
                    android:text="@string/newList"
                    android:textAlignment="center"
                    android:layout_marginTop="40dp"
                    android:fontFamily="monospace"
                    android:layout_marginLeft="13dp"
                    android:textSize="25dp"
                    android:textStyle="bold"
                    android:id="@+id/titlePage"/>



        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="20dp"
            android:background="#131e69"/>



    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bgcorners"
        android:layout_marginTop="-60dp"
        android:layout_marginLeft="16dp"
        android:orientation="vertical"
        android:layout_marginRight="16dp"
        android:id="@+id/ourList">



        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            android:layout_margin="15dp"
            app:counterEnabled="true"
            app:counterMaxLength="16"
            app:counterTextAppearance="@style/counter"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/addTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:inputType="textAutoCorrect"
                android:background="@drawable/bgcorners"
                android:hint="@string/add_title"
                android:textColorHint="@color/colorAccent"
                android:paddingStart="10dp"
                android:textColor="@color/design_default_color_primary_dark"
                android:maxLength="16"
                android:layout_marginBottom="0dp">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            android:layout_margin="15dp"
            app:counterMaxLength="70"
            app:counterEnabled="true"
            app:counterTextAppearance="@style/counter"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:id="@+id/addDesc"
                android:inputType="text"
                android:hint="@string/description"
                android:textColorHint="@color/colorAccent"
                android:paddingStart="10dp"
                android:textColor="@color/design_default_color_primary_dark"
                android:maxLength="70"
                android:layout_marginBottom="0dp">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            android:layout_margin="15dp"
            app:counterEnabled="true"
            app:counterMaxLength="12"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/addTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:inputType="textAutoCorrect"
                android:hint="@string/time"
                android:textColorHint="@color/colorAccent"
                android:paddingStart="10dp"
                android:textColor="@color/design_default_color_primary_dark"
                android:maxLength="12"
                android:layout_marginBottom="0dp">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bgcorners"
        android:text="Create New"
        android:textColor="#fff"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:elevation="20dp"
        android:id="@+id/btnSave"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:backgroundTint="@color/colorAccent" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bgcorners"
        android:text="Cancel"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:elevation="20dp"
        android:id="@+id/btnCancel"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_gravity="center"
        android:backgroundTint="#9a9a9a" />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>



</LinearLayout>